# tauridemo211218

./: Cargo.toml  README.md  index.html  package.json  tauri.conf.json  vite.config.js
server/: index.html  package.json  vite.config.js
server/src/: App.vue  main.js
src/: App.vue  main.js
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
