cargo-features = ["strip"]

[package]
name = "tauridemo"
version = "0.1.0"
description = "tauridemo Desktop App"
authors = ["tauridemo"]
license = "tauridemo"
repository = ""
default-run = "tauridemo"
edition = "2018"
build = "src/build.rs"



[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri.git", branch = "next", features = ["api-all"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
tracing-appender = "0.2.0"
clap = "3.0.0-beta.2"
tokio = { version = "1.0.1", features = ["full"] }
lazy_static = "1.4.0"

[features]
#default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[http]
debug = false               # HTTP debugging
proxy = "127.0.0.1:8888"         # HTTP proxy in libcurl format

#https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
#panic = "abort"
